--- a/spirng-backend/src/main/resources/application.yml
+++ b/spirng-backend/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
         database: postgresql
         database-platform: org.hibernate.dialect.PostgreSQLDialect
         hibernate:
-            ddl-auto: create-drop
+            ddl-auto: validate
         properties:
             hibernate:
                 format_sql: true
