--- a/spirng-backend/pom.xml
+++ b/spirng-backend/pom.xml
@@ -14,6 +14,7 @@
     <name>spirng-backend</name>
     <description>spirng-backend</description>
     <properties>
+        <h2.version>2.2.220</h2.version>
         <jjwt-api.version>0.11.5</jjwt-api.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <java.version>17</java.version>
@@ -86,6 +87,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
